syntax = "proto3";
package pb.logic;

message SignInReq {
    string token = 1;
    string agent = 2;
    string wsAddr = 3;
}

message SignInResp {
    string wsAddr = 1;
}

message OfflineReq {
    string token = 1;
}

message OfflineResp {
}

message SendMessageReq {
}

message SendMessageResp {
}

service Logic {
    //  设备登录
    rpc SignIn (SignInReq) returns (SignInResp);

    //  设备离线
    rpc Offline (OfflineReq) returns (OfflineResp);

    // 发送消息
    rpc SendMessage (SendMessageReq) returns (SendMessageResp);
}