syntax = "proto3";
package pb.ws_conn;

message DeliverMessageReq {
    string token = 1;
    bytes message = 2;
}

message DeliverMessageResp {

}

service WsConn {
    // 投递消息
    rpc DeliverMessage (DeliverMessageReq) returns (DeliverMessageResp);
}